# spectracs

./: .gitignore  CMakeLists.txt  README.md  applicationContext.cpp  applicationContext.h  main.cpp  mainwindow.cpp  mainwindow.h  spectracs_en_AT.ts  spectralJob.cpp  spectralJob.h  spectralMeasurement.cpp  spectralMeasurement.h  spectralMeasurementBarChart.cpp  spectralMeasurementBarChart.h  spectralMeasurementDbEntity.cpp  spectralMeasurementDbEntity.h  spectrasServerResponseHandler.cpp  spectrasServerResponseHandler.h  testEntity.cpp  testEntity.h
logic/camera/: CameraLogicModule.cpp  CameraLogicModule.h
logic/math/signal/: Signal.cpp  Signal.h
qdbmanager/: qdbmanager.cpp  qdbmanager.h
qdbmanager/entities/: abstractEntity.h  baseEntity.cpp  baseEntity.h
qdbmanager/interfaces/: qsqlite.h
ui/: BaseGraphicsPixmapView.cpp  BaseGraphicsPixmapView.h  HomeViewModule.cpp  HomeViewModule.h  SpectralJobOverviewViewModule.cpp  SpectralJobOverviewViewModule.h  SpectralJobViewModule.cpp  SpectralJobViewModule.h  SpectralJobsViewModule.cpp  SpectralJobsViewModule.h
